<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:context="com.example.administrator.settings.SettingsActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewBackground"
        android:layout_gravity="center"
        android:src="@drawable/backgroundsteel"
        android:scaleType="fitXY"
        android:contentDescription="@string/imageViewBackground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTitle"
        android:id="@+id/textViewTitle"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/whiteText"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/securitySectionLabel"
        android:id="@+id/securitySectionLabel"
        android:textColor="@color/grayText"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="250sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchPassword"
        android:textColor="@color/whiteText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/switchPassword"
        android:checked="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="200sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/returnSectionLabel"
        android:id="@+id/returnSectionLabel"
        android:textColor="@color/grayText"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="120sp"
        android:layout_marginEnd="90sp"
        android:layout_marginRight="90sp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToggleLabel"
        android:id="@+id/returnToggleLabel"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="65sp"
        android:layout_marginEnd="120sp"
        android:layout_marginRight="120sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/whiteText"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleReturn"
        android:id="@+id/toggleReturn"
        android:longClickable="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="50sp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch30"
        android:textColor="@color/whiteText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/switch30"
        android:checked="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10sp"/>



</FrameLayout>
