<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderbyDate"
        android:id="@+id/btnOrderbyDate"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveToCloud"
            android:id="@+id/btnSaveToCloud"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readFromCloud"
            android:id="@+id/btnReadCloud"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1" />
    </LinearLayout>




    <ListView
        android:id="@+id/lvReceipts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:contextClickable="false"
        android:contentDescription="@string/contentDescription"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:longClickable="true"
        android:listSelector="#adb9b6"
        android:layoutMode="clipBounds" />



</LinearLayout>
